// Vitest Snapshot v1

exports[`index > Can use the \`referentialIntegrity\` attributwe 1`] = `
"datasource database {
  provider             = \\"cockroachdb\\"
  url                  = env(\\"DATABASE_URL\\")
  referentialIntegrity = \\"prisma\\"
}

generator client {
  provider = \\"prisma-client-js\\"
}
"
`;

exports[`index > Can use the \`relationMode\` attributwe 1`] = `
"datasource database {
  provider     = \\"cockroachdb\\"
  url          = env(\\"DATABASE_URL\\")
  relationMode = \\"prisma\\"
}

generator client {
  provider = \\"prisma-client-js\\"
}
"
`;

exports[`index > Should allow to create schemas from a pre-defined folder structure 1`] = `
"datasource database {
  provider = \\"cockroachdb\\"
  url      = env(\\"DATABASE_URL\\")
}

generator client {
  provider = \\"prisma-client-js\\"
}

enum UserStatus {
  ACTIVE
  INACTIVE
  BANNED
}

model Post {
  id        String   @default(uuid()) @id
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  content   String
  deleted   Boolean
  imageUrl  String
}

model ImagePost {
  id        String   @default(uuid()) @id
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  content   String
  deleted   Boolean
  imageUrl  String
}

model User {
  id        String     @default(uuid()) @id
  createdAt DateTime   @default(now())
  updatedAt DateTime   @updatedAt
  status    UserStatus
  posts     Post[]
}
"
`;
